:lipstick: Updating the UI

--- a/src/renderer/assets/scss/custom.scss
+++ b/src/renderer/assets/scss/custom.scss
@@ -11,7 +11,7 @@ body {
 
 #logo {
   font-size: 35px;
-  color: #fff;
+  color: #B2B2B2;
   font-family: "Pacifico";
   margin-bottom: 10px;
 }
@@ -29,13 +29,6 @@ body {
     margin-right: 0;
   }
 }
-
-// .toast {
-//   position: fixed;
-//   bottom: 1rem;
-//   right: 1rem;
-//   max-width: 400px;
-// }
 
 .notifications {
   right: 1rem !important;
